# buoyancy_thinking

./: API.md  Cargo.toml  README.md
python/: test_division.py
src/: lib.rs  main.rs
src/api/: routes.rs
src/api/handlers/: actions.rs  ballast.rs  consensus.rs  continent.rs  division.rs  inject.rs  mod.rs  sse.rs  state.rs  strata.rs  vent.rs  websocket.rs
src/runtime/: mod.rs  simulation_loop.rs
src/simulation/: concept.rs  consensus_reactor.rs  continent.rs  core_truth.rs  fluid.rs  mod.rs  ore.rs  standing_wave.rs  traits.rs
src/state/: app_state.rs  commands.rs  events.rs  mod.rs
